package no.ntnu.idi.apollo69framework;

public class GameObjectDimensions {
    public static final float SPACE_SHIP_HEIGHT = 60;
    public static final float SPACE_SHIP_WIDTH = 60;
    
    public static final int GAME_RADIUS = 2000;
    public static final int INNER_RADIUS = GAME_RADIUS - 100;
    
    public static final float GEM_WIDTH = 20;
    public static final float GEM_HEIGHT = 20;
    public static final float GEM_RADIUS = GEM_HEIGHT/2f;
    
    public static final float POWERUP_WIDTH = 48;
    public static final float POWERUP_HEIGHT = 28.8f;
    public static final float POWERUP_RADIUS = POWERUP_HEIGHT/2f;

    public static final float ASTEROID_HEIGHT = 80;
    public static final float ASTEROID_WIDTH = 80;

    public static final float SHOT_WIDTH = SPACE_SHIP_WIDTH/5f;
    public static final float SHOT_HEIGHT = SPACE_SHIP_HEIGHT/5f;

}
