package no.ntnu.idi.apollo69framework.network_messages;

public class PlayerDead {
    public PlayerDead() {
    }
}
